Fixed aside above main on smaller screen sizes

--- a/src/assets/styles/sidebar.scss
+++ b/src/assets/styles/sidebar.scss
@@ -1,11 +1,10 @@
 aside {
   position: relative;
-  padding: 20px;
+  // padding: 20px;
   font-size: 1rem;
   overflow-x: hidden !important;
 
   display: flex;
-  flex-direction: column;
 
   a {
     display: flex;
